--- a/_config.yml
+++ b/_config.yml
@@ -28,8 +28,7 @@ twitter_username: jekyllrb
 github_username:  vaeruiz
 
 # Build settings
-theme: jekyll-theme-chirpy
-#theme: minima
+theme: minima
 plugins:
   - jekyll-feed
 
